--- a/High_School_Grades.ipynb
+++ b/High_School_Grades.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcCdhUQey0f7USKoTxToxY",
+      "authorship_tag": "ABX9TyM9G2ZOTwoH04zN4N7AvgPq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "U.S. high schools typically last for four years, from freshman year to senior year. 🚌💨\n",
+        "\n",
+        "First, ask the user to enter their grade as an integer.\n",
+        "\n",
+        "Create a four-year high school grade system using an if/elif/else statement:\n",
+        "\n",
+        "grade is 9, print 'Freshman'\n",
+        "grade is 10, print 'Sophomore'\n",
+        "grade is 11, print 'Junior'\n",
+        "grade is 12, print 'Senior'\n",
+        "Everything else is 'TBD'"
+      ],
+      "metadata": {
+        "id": "iqBYYd0X5Yr5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "Grade=int(input(\"Enter your Grade: \"))"
@@ -38,7 +57,7 @@
         "id": "pbNjYYs43ZXq",
         "outputId": "dce1feae-0898-4226-ace4-e76e5d6d1232"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -70,7 +89,7 @@
         "id": "nhEad1wP3e3a",
         "outputId": "8741ed89-49f1-4add-e7cb-bdc8887d3d7c"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +106,7 @@
       "metadata": {
         "id": "Mr5_kqfk3mwt"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
